Project

General

Profile

Actions

Bug #13798

closed

Strange "invalid subexp call" warning happens inside of comment

Bug #13798: Strange "invalid subexp call" warning happens inside of comment

Added by shyouhei (Shyouhei Urabe) about 9 years ago. Updated about 9 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.5.0dev (2017-08-10 trunk 59556) [x86_64-darwin15]
[ruby-core:82328]

Description

Attached script renders "invalid subexp call" warning.

zsh % ruby warn.rb
warn.rb:4: warning: invalid subexp call

This is strange in several ways:

  • The warning is triggered by Regexp#to_s, not by the compilation.
  • There is no such thing like a subexp call in the regular expression.

Files

warn.rb (82 Bytes) warn.rb shyouhei (Shyouhei Urabe), 08/10/2017 01:43 PM

Updated by nobu (Nobuyoshi Nakada) about 9 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset trunk|r59574.


re.c: options for sub-regexp

Actions

Also available in: PDF Atom